//
//  Strings.swift
//  TripManager
//
//  Created by Albert Aige Cortasa on 30/6/24.
//

struct Strings {
    static let nameField = "Name*"
    static let surnameField = "Surname*"
    static let emailField = "Email*"
    static let phoneField = "Phone"
    static let dateField = "Date*"
    static let descriptionField = "Description*"
    static let sumbitButton = "Submit"
    struct Cell {
        static let dateField = "Date:"
        static let originField = "Origin:"
        static let destinationField = "Destination:"
    }
    struct Map {
        static let origin = "Origin"
        static let destination = "Destination"
        static let stop = "Stop"
        static let address = "Address"
    }
    struct Alert {
        static let formSentAlert = "Form sent succesfully"
        static let requiredFieldsAlert = "Missing required fields"
        static let ok = "Ok"
    }
    struct Navigation {
        static let appTitle = "TripManager"
        static let contactButton = "Contact"
        static let contactFormTitle = "Contact form"
    }
}
